# bnl

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  dev.ps1  vcpkg.json
.claude/: settings.local.json
cmake/: embed_cacert.cmake  embed_stdlib.cmake  run_bnl_test.cmake
cmake/vcpkg-triplets/: x86-linux.cmake
docs/: README.md  architecture.md  deps-dev.md  extending.md  guide.md  plugin-dev.md  syntax.md
examples/: hello.bnl  server.bnl
examples/embed/: CMakeLists.txt  host.cpp
examples/plugin_c/: CMakeLists.txt  mathx.c
examples/plugin_native/: CMakeLists.txt  mathx.cpp
examples/scripts/: hello.bnl
include/bnl/: ast.h  interpreter.h  module.h  native_module.h  plugin.h  token.h  value.h  version.h
installer/windows/: bnl_installer.nsi
lib/: async.bnl  cli.bnl  cookie.bnl  csv.bnl  dns.bnl  dotenv.bnl  exec.bnl  fileSystem.bnl  http.bnl  io.bnl  log.bnl  math.bnl  mongo.bnl  multipart.bnl  mysql.bnl  path.bnl  pg.bnl  prelude.bnl  random.bnl  request.bnl  session.bnl  sqlite.bnl  template.bnl  test.bnl  time.bnl  url.bnl  uuid.bnl  web.bnl  ws.bnl  zlib.bnl
resources/: LICENSE.txt  README.txt  bnl.rc
scripts/: package.ps1  package.sh
src/: CMakeLists.txt  ast.h  ast_printer.cpp  ast_printer.h  class_type.cpp  class_type.h  diagnostic.h  dynamic_library.cpp  environment.cpp  environment.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  module.h  module_loader.cpp  module_loader.h  native_module.cpp  native_module.h  parser.cpp  parser.h  token.h  value.cpp  value.h
src/ffi/: dynamic_library.cpp  dynamic_library.h  plugin_api.cpp  plugin_api.h
src/frontend/: ast_printer.cpp  lexer.cpp  lexer.h  parser.cpp  parser.h
src/interpreter/: builtins.cpp  exprs.cpp  internal.h  runtime.cpp  stmts.cpp
src/native/: builtins.h  crypto.cpp  exec.cpp  httpp.cpp  io.cpp  json.cpp  net.cpp  sys.cpp  timers.cpp  tls.cpp  zlib_mod.cpp
src/runtime/: bn_aliases.cpp  bn_aliases.h  class_type.cpp  class_type.h  environment.cpp  environment.h  exprs.cpp  future.cpp  future.h  globals.cpp  internal.h  interpreter.cpp  module_loader.cpp  module_loader.h  native_module.cpp  stmts.cpp  value.cpp
src/stdlib/: crypto.cpp  dns.cpp  exec.cpp  ffi.cpp  http.cpp  httpp.cpp  io.cpp  json.cpp  math.cpp  mongo.cpp  mysql.cpp  net.cpp  pg.cpp  random.cpp  regex.cpp  registry.h  sqlite.cpp  sys.cpp  time.cpp  timers.cpp  tls.cpp  zlib.cpp
tests/: CMakeLists.txt  arithmetic.bnl  arithmetic.expected  bilingual.bnl  classes_basic.bnl  classes_basic.expected  classes_bilingual.bnl  classes_inheritance.expected  closures.expected  control_flow.expected  deps_basic.bnl  deps_basic.expected  import_basic.bnl  import_basic.expected  import_bilingual.bnl  import_stdlib.expected  io_async.bnl  io_async.expected  lib_download.bnl  lib_filesystem.expected  lib_http.bnl  lib_http.expected  lib_json.bnl  lib_json.expected  lib_request.bnl  lib_upload.bnl  lib_upload.expected  lib_web.expected  lib_web_https.bnl  lib_web_https.expected  lists.bnl  lists.expected  maps.bnl  maps.expected  member_access.bnl  member_access.expected  native_exec.bnl  native_exec.expected  native_httpp.expected  native_io.expected  (+8 more)
tests/_fixtures/proj_a/: app.bnl
tests/_fixtures/proj_a/src/: nested.bnl
tests/_fixtures/proj_full/: app.bnl  bnl.json
tests/_fixtures/proj_full/src/: nested.bnl
tests/_fixtures/tls/: cert.pem  key.pem
tests/_fixtures/views/: base.html  child.html  footer.html  grandchild.html  layout.html
tests/_imports/: math.bnl
tests/lang/: bilingual.bnl  bilingual.expected  bilingual_modules.bnl  bilingual_modules.expected  break_continue.bnl  break_continue.expected  classes_bilingual.bnl  classes_bilingual.expected  classes_inheritance.bnl  closures.bnl  control_flow.bnl  default_params.bnl  default_params.expected  deps_basic.bnl  direct_plugin.expected  for_loop.bnl  for_loop.expected  import_basic.bnl  import_bilingual.bnl  import_bilingual.expected  import_stdlib.bnl  import_stdlib.expected  operators_short.bnl  operators_short.expected  proj_full.bnl  proj_full.expected  strings.expected  strings_intrinsics.bnl  strings_intrinsics.expected  switch_basic.bnl  switch_basic.expected  try_catch.bnl  try_catch.expected
tests/stdlib/: future_basic.bnl  future_basic.expected  io_async.bnl  lib_async.bnl  lib_async.expected  lib_cli.bnl  lib_cli.expected  lib_cookie_session.bnl  lib_cookie_session.expected  lib_csv.bnl  lib_csv.expected  lib_dns.bnl  lib_dns.expected  lib_dotenv.bnl  lib_dotenv.expected  lib_download.expected  lib_exec.bnl  lib_exec.expected  lib_filesystem.bnl  lib_io.bnl  lib_io.expected  lib_log.bnl  lib_log.expected  lib_math.bnl  lib_math.expected  lib_mongo.bnl  lib_mongo.expected  lib_multipart.bnl  lib_multipart.expected  lib_multipart_stream.bnl  lib_multipart_stream.expected  lib_mysql.bnl  lib_mysql.expected  lib_path.bnl  lib_path.expected  lib_pg.bnl  lib_pg.expected  lib_random.bnl  lib_random.expected  lib_request.bnl  (+86 more)
